syntax = "proto3";

option go_package = "gitlab.com/rarify-protocol/tss-svc/pkg/types";

message Party {
  string id = 1;
  string address = 2;
  string pubKey = 3;
  string account = 4;
}