syntax = "proto3";

option go_package = "gitlab.com/rarify-protocol/tss-svc/pkg/types";

enum StepType {
  Proposing = 0;
  Accepting = 1;
  Signing = 2;
}

enum Status {
  Pending = 0;
  Processing = 1;
  Success = 2;
  Failed = 3;
}

message Step {
  string startBlock = 1;
  string endBlock = 2;
  StepType type = 3;
}

message Pool {
  repeated string indexes = 1;
  string root = 2;
  string proposerId = 3;
}

message Session {
  uint64 id = 1;
  Status status = 2;
  Pool pool = 3;
  repeated Step steps = 4;
  StepType currentStep = 5;
  repeated string acceptedId = 6;
  repeated string signedId = 7;
}